# find_package_example

./: LICENSE  README.md
config_mode/foo/: CMakeLists.txt
config_mode/foo/src/: foo.cpp  foo.h
config_mode/main/: CMakeLists.txt
config_mode/main/src/: main.cpp
module_mode/foo/: CMakeLists.txt
module_mode/foo/src/: foo.h
module_mode/main/: CMakeLists.txt
module_mode/main/cmake/modules/: FindFOO.cmake
